50% done with midterm
did sections 1 and 2

--- a/arts.html
+++ b/arts.html
@@ -69,7 +69,6 @@
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
       color: white;
       text-align: center;
-
       }
 
 
@@ -121,10 +120,20 @@
 
    <p style="font-size:22px;font;text-align:center;">Under Construction!</p>
 
-   <img style="width:25%;"" class="img-ae" src="img/peachpj.JPG" alt="peachpj">
+   <img style="width:20%; position: relative;" class="img-ae" src="img/peachpj.JPG" alt="peachpj">
 
-      <img style="width:50%; position: center;" class="img-art" src="img/aeclportrait.jpg">
-  
+
+    <img style="width:40%; position: relative;" class="img-art" src="img/aeclportrait.jpg">
+
+    
+   <img style="width:20%; position: relative;" class="img-art" src="img/kagomeart.jpg">
+
+
+   <img style="width:40%; position: relative;" class="img-art" src="img/pianogirlaecl.jpg">
+
+    <img style="width:40%; position: relative;" class="img-art" src="img/selfimage.jpg">
+
+    <img style="width:45%; position: relative;" class="img-art" src="img/aeclinuyasha.jpg">
 
   <br > 
 </div>
