--- a/badm320midterm.html
+++ b/badm320midterm.html
@@ -35,21 +35,21 @@
 
 
       #subtitle {
-        font-size:20px;
+        font-size:30px;
         text-align: left;
         font-family: times;
       }
 
 
       #info {
-      font-size: 14px;
+      font-size: 24px;
       font-family: times;
       text-align: left;
 
      }
 
      #words {
-      font-size: 12px;
+      font-size: 16px;
       text-align: left;
       text-decoration: none;
       font-family: times;
@@ -62,7 +62,7 @@
 
       p {
       word-wrap: break-word;
-      width: 700px;
+      width: 950px;
 }
       }
       
@@ -128,8 +128,11 @@
     position: center;
     text-align: center;
    }
+
+
       
   </style>
+  
 
 <!---------------------------------------------------->
   
@@ -177,31 +180,35 @@
 AECL</h3>
 
   <h3 id="info" style="text-align: left;font-family:copperplate;">Brand Logo:</h3>
-  <p id="words">An intellectual with sophisticated glasses, tea enthusiast, a connoisseur of yellow things. Poised and elegant like pink. Natural born leader with a fiery red personality ready to fight for human rights. The perfect student for your law school, Class of 2023. I am AECL ... Ana Elissa Cabrera Leon ... and I need YOUR LAW SCHOOL to become the best person and attorney I can be to make the impact in society I was born to make.</p>
+  <p id="words">An intellectual with sophisticated glasses, tea enthusiast, a connoisseur of yellow things. Poised and elegant like pink. Natural born leader with a fiery red personality ready to fight for human rights. The perfect student for your law school, Class of 2023. I am AECL ... Ana Elissa Cabrera Leon ... your law school really needs a woman with the values, life experiences, skills and characteristics that I have! Help me become the best attorney I can be to make the impact in society I was born to make!</p>
 
   <div class="gallery">
-   <img class="img-dc" style="width:25%;" src="img/aeclmylogo.png" alt="my-logo">
-   <img class="img-uiuc" style="width:20%;" src="img/kaprush.jpg">
+   <img class="img-dc" style="width:25%; text-align: left;" src="img/aeclmylogo.png" alt="my-logo">
+   <img class="img-uiuc" style="width:20%; text-align:left;" src="img/kaprush.jpg">
  </div>
 <hr>
 <!*************************************************1> 
 
 <h3 id="subtitle" style="font-family: copperplate;">Step 1: Self-Analysis</h3>
 
-<h3 id=”info style="font-family: copperplate;"”>How I Perceive Myself</hr> 
+<h3 id= "info" style="font-family:copperplate;">How I Perceive Myself:</hr> 
 
-<p id=“words” style="font-weight: normal; font-size: 12px; font-family: times;">Law School is very tough but that goes without saying. To succeed in such a challenging and competitive yet life-changing and growing environment, it takes someone just as tough to achieve a Juris Doctorate. I perceive myself as a very resilient, persevering, honest and vocal person who loves learning and is very adamant and dedicated in defending basic human rights and ideas. To be the best student I can be in your law school, I took the first steps to become more self-aware of who I really am by understanding my areas of improvement and strengths.</p>
 
-<p id="words">Like any case with potential, it is best to first know the bad parts about it. My biggest weaknesses are my inability to manage my interpersonal skills and situations effectively; accepting criticism or advice; overanalyzing everything, especially the past; my timeliness; my struggle to control my emotions; and seeing in black and white but not the grey area. As an introvert, my interpersonal skills need refinement because I often come off as too honest and aggressive with no tactfulness when dealing with arguments between people I disagree with, primarily with family and friends but never in a professional or academic setting. A solution to this is allowing myself to socialize more and ask others to guide me on how to be more personable. One of my shortcomings that I have seen in my workplace is not taking criticism or advice well, which is mostly true and I am working on this by becoming a better listener and more self-aware of my surroundings based on what knowledgeable, respectable people who know me have to say about my work and character. Two other weaknesses that I have is overanalyzing everything recursively until it makes sense, which becomes frustrating when tackling questions without available answers; and my struggle to control my emotions, which can sometimes impact my grades and overall quality of life but because of my abominable strengths, I always stand back up stronger than ever to achieve my goals and dreams despite how sad or stressed I feel.</p>
+<p id="words">Law School is very tough but that goes without saying. To succeed in such a challenging and competitive yet life-changing and growing environment, it takes someone just as tough to achieve a Juris Doctorate. I perceive myself as a very resilient, persevering, honest and vocal person who loves learning and is very adamant and dedicated in defending basic human rights and ideas. To be the best student I can be in your law school, I took the first steps to become more self-aware of who I really am by understanding my areas of improvement and strengths. <br />
+<br>
+Like any case with potential, it is best to first know the bad parts about it. My biggest weaknesses are managing my interpersonal skills and social situations effectively; accepting criticism or advice; overanalyzing everything, especially the past; my timeliness; my struggle to control my emotions; and seeing in black and white but not the grey area. As an introvert, my interpersonal skills need refinement because I often come off as too honest and aggressive with no tactfulness when dealing with arguments between people I disagree with, primarily with family and friends but never in a professional or academic setting. A solution to this is allowing myself to socialize more and ask others to guide me on how to be more personable. One of my shortcomings that I have seen in my workplace is not taking criticism or advice well, which is mostly true and I am working on this by becoming a better listener and more self-aware of my surroundings based on what knowledgeable, respectable people who know me have to say about my work and character. Two other weaknesses that I have is overanalyzing everything recursively until it makes sense, which becomes frustrating when tackling questions without available answers; and my struggle to control my emotions, which can sometimes impact my grades and overall quality of life but because of my abominable strengths, I always stand back up stronger than ever to achieve my goals and dreams despite how sad or stressed I feel.</p>
 
-<p id="words">My biggest strengths are my honesty and loyalty, resilience during adversity, my charge to accomplish my goals no matter how challenging, and my courage to voice my opinion and to stand up for important human rights causes. My strongest motivator to pursue human rights law is unlike that of other candidates due to my unmatchable life experiences and ability to handle situations where human rights have been violated. Security of person, freedom from inhuman or degrading treatment or punishment, right to one’s own privacy, and freedom of opinion and expression is one of the many basic human rights written under the Universal Declaration of Human Rights (United Nations, 2020) and at 21 years old, someone took all those mentioned rights from me. My first relationship was with a computer science major transfer student at UIUC who deceived me in unlawful ways (crime against humanity), trapped me in his car in an empty Dick’s Sporting Goods parking lot during night and refused to let me escape or take me back home until I stopped crying (cruel punishment), broke a door to open a bathroom while I was using it just to make sure I wasn’t calling the police on him (privacy), trapped me in his closet while putting his hands on me so that I couldn’t move until I begged him not to kill me repeatedly (right to life and security of person), took out a knife and decapitated my plush teddy bear (degrading treatment) last Summer 2019. Being in a such a situation has given me a unique perspective in life and has helped me value how importance of supporting and helping others, given the lack of support I was given to deal with my past. Thus my ability to manage my professional and academic world while my personal world is up in flames is uncanny. My love and commitment to justice and human rights, for the betterment of society, the best personal trait I have and this makes me, AECL, the perfect match for your law school.</p>
+<p id="words">My biggest strengths are my honesty and loyalty, resilience during adversity, my charge to accomplish my goals no matter how challenging, and my courage to voice my opinion and to stand up for important human rights causes. My strongest motivator to pursue human rights law is unlike that of other candidates due to my unmatchable life experiences and ability to handle situations where human rights have been violated. Security of person, freedom from inhuman or degrading treatment or punishment, right to one’s own privacy, and freedom of opinion and expression is one of the many basic human rights written under the Universal Declaration of Human Rights (United Nations, 2020) and at 21 years old, someone took all those mentioned rights from me. My first relationship was with a computer science major transfer student at UIUC who deceived me in unlawful ways (crime against humanity), trapped me in his car in an empty Dick’s Sporting Goods parking lot during night and refused to let me escape or take me back home until I stopped crying (cruel punishment), broke a door to open a bathroom while I was using it just to make sure I wasn’t calling the police on him (privacy), trapped me in his closet while putting his hands on me so that I couldn’t move until I begged him not to kill me repeatedly (right to life and security of person), took out a knife and decapitated my plush teddy bear (degrading treatment) last Summer 2019. Being in such a situation has given me a unique perspective in life and has helped me value how importance of supporting and helping others, given the lack of support I was given to deal with my past. Thus my ability to manage my professional and academic world while my personal world is up in flames is uncanny. My love and commitment to justice and human rights, for the betterment of society, the best personal trait I have and this makes me, AECL, the perfect match for your law school.</p>
 
 <p id="words">On the lighter side, my creativity (arts), longing for more knowledge (becoming a self-taught web developer), my writing, reading and editing skills are a few more of my great strengths. Below is a video I did for a calculus class where I simplified complex math concepts and delivered them through a song for a final project. This was when my forever-nerd stage was at its worst, back in high school so it’s a bit embarrassing!</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/d3ieB5-Xb-g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+<div>
+<a id="words">To look at my art, click 
+<a id="words" style="color:blue;text-decoration: underline;" href="arts.html">here.<a>. 
+<div>
 
-</p>
 
   <div class="gallery">
    <!img class="img-dc" style="width:25%;" src="img/aeclmylogo.png" alt="my-logo">
@@ -213,9 +220,26 @@ AECL</h3>
 
 <h3 id="subtitle" style="font-family: copperplate;">Step 2: External Analysis</h3>
 
-<h3 id=”info”>How Others Perceive Me</hr> 
+<h3 id= "info" style="font-family:copperplate;">How Others Perceive Me:</hr>  
 
-<p id=“words” style="font-size: 12px; font-family: times;"></p>
+<p id="words">I can think anything about myself but that does not mean much if my self-perception is completely different from what others think of me. To keep a real image of AECL, I found it important to interview people from three distinct groups &mdash; family, friends, acquaintances &mdash; what they think my weaknesses and strengths are and my best personal trait.
+
+<h3 id="words" style="text-decoration: underline;">Family<h3>
+<p id="words">I interviewed Family S. My sister said my weakness was that I don’t know how to deal with people. She said she could not think of a single good thing about me so she did not mention what she thought my strengths or best personal trait is.</p>
+
+<h3 id="words" style="text-decoration: underline;">Friends<h3>
+<p id="words">Friend V, who I befriended when I was three years old and have been close friends ever since, knows me the most out of all my friends. Her response to my question was very thorough and detailed. For Friend V, my greatest and clearest strength is mu willingness to accomplish my goals. I am an excellent student with many talents, many of which she pointed I taught myself. Friend V finds it incredibly impressive to see and hear about all of the things I have been able to accomplish, and she is sure that I am very proud of myself for doing the things I have done in my beginning stages of life. She also stated that my best personal trait is being factual. I always have evidence to back me up, and I always make sure to do my research on a topic so that I know exactly what I'm talking about. Another one of my trait that Friend V thinks deserves srecognition is my persistence. This ties into what she mentioned before. She stressed that when I see something, I want it, and I get it. She exemplifies my scholarships, internships, travel opportunities, grades, and skills because they all have been accomplished/learned/earned because I was persistent. She thinks it’s truly a commendable trait.</p>
+
+<p id="words">Friend V also mentioned that my weakest trait would be understanding, and she means this in a multitude of ways. Because I am so hard on facts, sometimes I don’t understand why someone may have done something that would be in contrary to my beliefs. She always finds me saying, “why would they do something like that?”. I have a very clear way of seeing things, but that ultimately leads to me not understanding other people’s point of view. Just because I have a very clear cut way of seeing the world, doesn’t mean that others do. To me, this shows my black and white thinking and being arrogant towards my views and not the grey areas other people might have. This weak trait also ties into taking things personally. Sometimes when you I don't understand why someone has done something, I think that it’s because they want to hurt me when a lot of the time, it’s not the case. To try and tie someone’s actions to something that makes sense to me, sometimes I tie it to them being against you, or purposely doing something to hurt you. Friend V ender her response by saying, "It’s a tough habit to get rid of, especially if you have had instances of betrayal in your lifetime, but in situations that this is not the case, you may ruin those relationships." The instance of betrayal she referred to was the tragedy I mentioned in the previous section, that which truly helped me develop my strenghts. As can be seen though, this also affected my weaknesses regarding my intrepersonal relations.</p>
+
+<p id="words">Friend H, who I befriended at UIUC four years ago, said my clearest strengths were knowledge, determination and creativity. For him, my best personal trait is that I like to know new knowledge, and that my weakness is my emotional response.</p>
+<p id="words">Friend A, who I befriended 4 years ago at UIUC, said my clearest strength is courage in difficult situations, my best personal trait is my desire to help others, and my weaknesses are my impatience and distrust.</p>
+<p id="words">Friend P, who I befriended this Spring at UIUC, said my clearest strength is my ability to be a good and responsible friend despite the stressful events going on in your life. You’ve done a phenomenal job of prioritizing your friendships! I feel that it takes incredible strength to crack jokes and interact with your friends while your grandma was dying. He thinks my best personality trait is your outgoing, gregarious personality. It makes you a lot easier for him to talk to me! He thinks my weakest personality trait is reading too closely into things.</p>
+
+<h3 id="words" style="text-decoration: underline;">Acquaintances<h3>
+<p id="words">The third category includes acquaintances. Acquaintance R, who I met 2 years ago at UIUC, said my clearest strength is being straightforward and honest. My best personality trait is always being considerate of other people’s needs. My weakness is not assuming other people have good intentions sometimes. </p> 
+<p id="words">Acquaintance D, who I met 1 year ago at UIUC, said my clearest strength is that I’m driven. The best personal trait is that I care a lot. My weaknesses are that I overthink a lot and that I think with my heart.</p>
+
 
 <p id="words"></p>
 
@@ -223,11 +247,8 @@ AECL</h3>
 
 </p>
 
-  <div class="gallery">
-   <!img class="img-dc" style="width:25%;" src="img/aeclmylogo.png" alt="my-logo">
-   <!img class="img-uiuc" style="width:20%;" src="img/kaprush.jpg">
- </div>
 <hr>
+
 <!*************************************************3>
 
 <h3 id="subtitle" style="font-family:copperplate;">Step 3: Congruence</h3>
