--- a/contact.html
+++ b/contact.html
@@ -202,7 +202,7 @@ input[type=submit]:hover {
     <div class="container">
   <div>
 
-<img src="img/profesh.jpg" style="width:25%;"  ALIGN="left" alt="professional">
+<img src="img/glasses.JPG" style="width:25%;"  ALIGN="left" alt="professional">
 
    
   </div>
