--- a/badm320midterm.html
+++ b/badm320midterm.html
@@ -5,7 +5,7 @@
   <meta charset=“UTF-8”/>
   <link rel="stylesheet" type="text/css" href="css/adventures.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>aec4 📝 badm320 blog</title>
+  <title>aec4 🕵🏻‍♀️ adventures</title>
 </head>
 
     
@@ -149,7 +149,7 @@
     <div id="titlebar" style="border-top: 5px solid black; border-bottom: 5px solid black; text-decoration: underline;">
         <a id="homebutton" class="titlebar" href="XREADME.html">HOME 🏡</a>
         <a id="aboutmebutton" class="titlebar" href="aboutme.html">ABOUT 🇬🇹</a>
-        <a id="adventuresbutton" class="titlebar" href="badm320midterm.html">BADMN320 BLOG 📝</a>
+        <a id="adventuresbutton" class="titlebar" href="badm320midterm.html"> ADVENTURES 🕵🏻‍♀</a>
         <a id="blogbutton" class="titlebar" href="arts.html">ARTS🎨</a>
         <a id="gallerybutton" class="titlebar" href="gallery.html">GALLERY📷</a>
         <a id="contactbutton" class="titlebar" href="contact.html">CONTACT📬</a> 
@@ -158,17 +158,10 @@
 </div>
 
 <div>
-    <h1>Business Administration 320: Marketing</h1>
-    <h3 id="info"> Assignment: Midterm <br/> My Name: Ana Elissa Cabrera <br/>My NedId: aec4 <br/> Professor: Shabbaz <br/> Gies College of Business, Online Class <br/> University of Illinois at Urbana-Champaign </h3>
+    <h1>Aventures</h1>
+    <h3 id="info">So...<br/> Where in the World Have I been? <br/>Where to next?<br/>When the world heals I will start my adventures once more<br/>Take a Look at My Past Adventures While You Wait <br/> Meanwhile I shall stay safe in my room...for </h3>
 <!---------------------------------------------------->
-<hr>  
-<h3 id="subtitle">Table of Contents</h3>
-<p  id="info">Step 0: Brand Background<p>
-<p  id="info">Step 1: Self-Analysis<p>
-<p  id="info">Step 2: External Analysis <p> 
-<p  id="info">Step 3: Congruence <p>
-<p  id="info">Step 4: Feature-Benefit <p>
-<hr>
+
 
 <!*************************************************0> 
 
@@ -189,100 +182,38 @@ AECL</h3>
 <hr>
 <!*************************************************1> 
 
-<h3 id="subtitle" style="font-family: copperplate;">Step 1: Self-Analysis</h3>
+<h3 id="subtitle" style="font-family: copperplate;"></h3>
 
-<h3 id= "info" style="font-family:copperplate;">How I Perceive Myself:</hr> 
+<h3 id= "info" style="font-family:copperplate;"></hr> 
 
 
-<p id="words">Law School is very tough but that goes without saying. To succeed in such a challenging and competitive yet life-changing and growing environment, it takes someone just as tough to achieve a Juris Doctorate. I perceive myself as a very resilient, persevering, honest and vocal person who loves learning and is very adamant and dedicated in defending basic human rights and ideas. To be the best student I can be in your law school, I took the first steps to become more self-aware of who I really am by understanding my areas of improvement and strengths. <br />
+<p id="words"> <br />
 <br>
-Like any case with potential, it is best to first know the bad parts about it. My biggest weaknesses are having (1) too high expectations of people by hoping they can be there for me the same way I am there for them and this is because I give too much goodness to others too fast; (2) my interpersonal skills with family and friends; (3) accepting criticism or advice; (4) being perceived as not friendly because I am too quiet, reserved, not super liberal, and dislike popular social/lifestyle trends that my Generation Z follow; (5) overanalyzing everything, especially the past; (6) my struggle to control my emotions in my personal life; and (7) seeing in black and white but not the grey area. Finally, I am (8) a perfectionist that wants every word said and written correctly, which takes too much time and energy on my part which can lead to me taking more time than I should in assignments so I can go above and beyond with my work quality.</p>
+</p>
 
-<p id="words">My biggest strengths are my honesty and loyalty, resilience during adversity, my charge to accomplish my goals no matter how challenging, and my courage to voice my opinion and to stand up for important human rights causes. My strongest motivator to pursue human rights law is unlike that of other candidates due to my unmatchable life experiences and ability to handle situations where human rights have been violated. Security of person, freedom from inhuman or degrading treatment or punishment, right to one’s own privacy, and freedom of opinion and expression is one of the many basic human rights written under the Universal Declaration of Human Rights (United Nations, 2020) and at 21 years old, someone took all those mentioned rights from me. My first relationship was with a computer science major transfer student at UIUC who deceived me in unlawful ways (crime against humanity), trapped me in his car in an empty Dick’s Sporting Goods parking lot during night and refused to let me escape or take me back home until I stopped crying (cruel punishment), broke a door to open a bathroom while I was using it just to make sure I wasn’t calling the police on him (privacy), trapped me in his closet while putting his hands on me so that I couldn’t move until I begged him not to kill me repeatedly (right to life and security of person), took out a knife and decapitated my plush teddy bear (degrading treatment) last Summer 2019. Being in such a situation has given me a unique perspective in life and has helped me value the importance of supporting and helping others, given the lack of support I was given to deal with my past. Thus my ability to manage my professional and academic world while my personal world is up in flames is uncanny. My best personal traits are: my commitment to accomplish what I promise myself to do and my desire to help people and fight for justice and human rights for the betterment of society. This makes me, AECL, the perfect match for your law school.</p>
+<p id="words"></p>
 
-<p id="words">On the lighter side, my creativity (arts), language skills and English-Spanish translation, longing for more knowledge (becoming a self-taught web developer), my writing, reading and editing skills are a few more of my great strengths. Below is a video I did for a calculus class where I simplified complex math concepts and delivered them through a song for a final project. This was when my forever-nerd stage was at its worst, back in high school so it’s a bit embarrassing!</p>
+<p id="words"></p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/d3ieB5-Xb-g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <div>
-<a id="words">To look at my art, click 
+<a id="words">
 <a id="words" style="color:blue;text-decoration: underline;" href="arts.html">here.<a>. 
 <div>
 
 
   <div class="gallery">
-   <!img class="img-dc" style="width:25%;" src="img/aeclmylogo.png" alt="my-logo">
-   <!img class="img-uiuc" style="width:20%;" src="img/kaprush.jpg">
+   
  </div>
 <hr>
 
 <!*************************************************2> 
 
-<h3 id="subtitle" style="font-family: copperplate;">Step 2: External Analysis</h3>
-
-<h3 id= "info" style="font-family:copperplate;">How Others Perceive Me:</hr>  
-
-<p id="words">I can think anything about myself but that does not mean much if my self-perception is completely different from what others think of me. To keep a real image of AECL, I found it important to interview people from three distinct groups &mdash; family, friends, acquaintances &mdash; what they think my weaknesses and strengths are and my best personal trait.
-
-<h3 id="words" style="text-decoration: underline;">Family<h3>
-<p id="words">I interviewed Family S. My little sister said my weakness was that I don’t know how to deal with people. She said she could not think of a single good thing about me so she did not mention what she thought my strengths or best personal trait is.</p>
-
-<h3 id="words" style="text-decoration: underline;">Friends<h3>
-<p id="words">Friend V, who I befriended when I was three years old and have been close friends ever since, knows me the most out of all my friends. Her response to my question was very thorough and detailed. For Friend V, my greatest and clearest strength is mu willingness to accomplish my goals. I am an excellent student with many talents, many of which she pointed I taught myself. Friend V finds it incredibly impressive to see and hear about all of the things I have been able to accomplish, and she is sure that I am very proud of myself for doing the things I have done in my beginning stages of life. She also stated that my best personal trait is being factual. I always have evidence to back me up, and I always make sure to do my research on a topic so that I know exactly what I'm talking about. Another one of my trait that Friend V thinks deserves srecognition is my persistence. This ties into what she mentioned before. She stressed that when I see something, I want it, and I get it. She exemplifies my scholarships, internships, travel opportunities, grades, and skills because they all have been accomplished/learned/earned because I was persistent. She thinks it’s truly a commendable trait.</p>
-
-<p id="words">Friend V also mentioned that my weakest trait would be understanding, and she means this in a multitude of ways. Because I am so hard on facts, sometimes I don’t understand why someone may have done something that would be in contrary to my beliefs. She always finds me saying, “why would they do something like that?”. I have a very clear way of seeing things, but that ultimately leads to me not understanding other people’s point of view. Just because I have a very clear cut way of seeing the world, doesn’t mean that others do. To me, this shows my black and white thinking and being arrogant towards my views and not the grey areas other people might have. This weak trait also ties into taking things personally. Sometimes when you I don't understand why someone has done something, I think that it’s because they want to hurt me when a lot of the time, it’s not the case. To try and tie someone’s actions to something that makes sense to me, sometimes I tie it to them being against you, or purposely doing something to hurt you. Friend V ender her response by saying, "It’s a tough habit to get rid of, especially if you have had instances of betrayal in your lifetime, but in situations that this is not the case, you may ruin those relationships." The instance of betrayal she referred to was the tragedy I mentioned in the previous section, that which truly helped me develop my strenghts. As can be seen though, this also affected my weaknesses regarding my intrepersonal relations.</p>
-
-<p id="words">Friend H, who I met at UIUC four years ago, said my clearest strengths were knowledge, determination and creativity. For him, my best personal trait is that I like to know new knowledge, and that my weakness is my emotional response.</p>
-
-<p id="words">Friend E, who I met at UIUC four years ago, said my clearest strengths is that when I am commited to something, I cimmit a lot into it and get it done. For her, my best personal trait is that I am inviting and that I make connections easily. She could not think of any weaknesses that I have.</p>
-
-<p id="words">Friend A, who I met four years ago at UIUC, said my clearest strength is courage in difficult situations, my best personal trait is my desire to help others, and my weaknesses are my impatience and distrust.</p>
-
-<p id="words">Friend P, who I met this Spring at UIUC, said my clearest strength is my ability to be a good and responsible friend despite the stressful events going on in your life. You’ve done a phenomenal job of prioritizing your friendships! I feel that it takes incredible strength to crack jokes and interact with your friends while your grandma was dying. He thinks my best personality trait is your outgoing, gregarious personality. It makes you a lot easier for him to talk to me! He thinks my weakest personality trait is reading too closely into things.</p>
-
-<p id="words">Friend R, who I met two years ago at UIUC, said my clearest strength is being straightforward and honest. My best personality trait is always being considerate of other people’s needs. My weakness is not assuming other people have good intentions sometimes.</p> 
-
-<p id="words">Friend D, who I met one year ago at UIUC, said my clearest strength is that I’m driven. The best personal trait is that I care a lot. My weaknesses are that I overthink a lot and that I think with my heart.</p>
 
 
-<h3 id="words" style="text-decoration: underline;">Acquaintances<h3>
-
-
-<p id="words">Aquaintance W was my previous boss when I interned at a lobbying firm in Washington DC last Fall 2019. She told me last December that one of the weaknesses I had in the workplace was not taking criticism or advice well and also understanding social cues. Sometimes I am set in my own ways and need to improve on letting others teach me different more efficient ways of doing something. There were times where I was being a bit awkward during a small-talk conversation with her. I also recall her mentioning I was overall helpful and personable when connecting with people, which I took as my strehgnths. This was my first college internship ever so I learned so much from it.</p>
-
-<p id="words">Aquaintance M was a classmate in my 4-week study abroad in Vienna program. Although we only engaged with each other in class, some evenings during free time, and school trips, he still managed to mention my clearest strenght, which is being adventurous, and my best personality trait, which is being inclusive with our colleagues. He said he could not think of a single weakness I may have!
-
-
-<p id="words"></p>
-
-<p id="words"></p>
-
-</p>
-
-<hr>
-
-<!*************************************************3>
-
-<h3 id="subtitle" style="font-family:copperplate;">Step 3: Congruence</h3>
-
-
-<h3 id= "info" style="font-family:copperplate;">How To Reposition Myself:</hr>  
-
-<p id="words">
-There was a significant amount of congruence between what I think about myself and what others think about me. I am aware of my weaknesses, such as my underdeveloped interpersonal skills, not trusting people, thinking that others want to hurt me due to past experiences where I was severely hurt, letting my emotions control me when making personal life decisions, and letting my distrust negatively impact my family and friend relationships. Every single family and friend that I interviewed mentioned something in relation to the walls I build around them. Something How I can reposition myself is by allowing myself to socialize more and ask family and friends to guide me on how to be more social, personable and more patient.
-
-<p id="words">The two people who do not know me personally, such as Acquaintance W and Acquaintance M, had no knowledge that I was distrusting of others or was emotionally driven. Infact, acquaintances that are not in my personal life thought I was personable and inclusive. This is due to my great strength, my ability to manage my professional/academic life very seperatly from my private life. Church/state cannot mix. I like it that way and has allowed me to keep up my good grades and overall performance.</p>
-
-<p id="words">One of the weaknesses feedback I wasn't expecting was when Friend V said I am not good in understanding in many aspects. That blew my mind, but it made more sense when she started talking about how I don't understand people and why they do what they do sometimes. This is partly because I have trouble seing grey areas and mostly because I overthink many things.  How I can reposition myself is by accepting that some questions simply don't have answers and that it is not worth my time analyzing why people are who they are and just live life freely. I can also try to sympathize with people I may not agree or relate with.</p>
-
-<p id="words">One thing I realized that was really important was that my self-perception was very bleak and negative. For example, I thought I wasn't too friendly overall but my friends think I am kind, very caring, super inviting, willing to help, and that I'm always there for them even when my life is in very tragic situations. Some friends even said I was gregarious, easy to talk to and very outgoing! Here I was thinking my intrepersonal skills were horrible. In fact, some people I interviewed even told me they couldn't think of my weaknesses. There are still a lot of things I need to work on, like my emotions and being more patient and tolerant with others who disagree with me. On the brighter side though, all my friends truly admire my accomplishments, my commitment to complete all my goals, my drive to finish what I start, and most importantly all the knowledge I have on so many topics that I taught myself and work hard in getting right. This can be learning a new language, how to code, how to play the paino, and other topics I research. I can certainly say that there is very high (but not perfect) congruence to how I perceive myself versus how others &mdash; the world &mdash; perceive me.
-</p>
-
-
-<hr> 
 <!*************************************************4> 
-
-<h3 id="subtitle" style="font-family:copperplate;">Step 4: Feature-Benefit</h3>
+<h3 id="subtitle" style="font-family:copperplate;">AECL's Feature-Benefit</h3>
 
 <h3 id= "info" style="font-family:copperplate;">My Cost-Benefit Analysis</hr>  
 
