wow i did a lot
shifted what i was working on in aecl-closet repository.
-fixed position for carousel pics
-added a moving banner
-linked professional button on sidemenu to old page
-linked contact button on top-right menu to old page
-did some css resize and position adjustments

--- a/aboutme.html
+++ b/aboutme.html
@@ -120,10 +120,10 @@
 
 
  
-<div style="background-image: url('img/br/hello.jpg'); background-position: center; background-position: fixed; padding-top: 100px;">
+<div style="background-image: url('images/br/hello.jpg'); background-position: center; background-position: fixed; padding-top: 100px;">
 
   <div>
- <img class="my-logo"  src="img/aeclmylogo.png">
+ <img class="my-logo"  src="images/aeclmylogo.png">
 </div>
 
 <div>
@@ -144,7 +144,7 @@
     <h1 id="title">About Me</h1>
 
 <br>
-<img src="img/profesh.jpg" style="width:40%; top:20px;"  ALIGN="left" alt="professional">
+<img src="images/profesh.jpg" style="width:40%; top:20px;"  ALIGN="left" alt="professional">
 
 <h3 id="subtitle"> Hi, my name is Ana Elissa!</h3>
   <p id="info" style="font;text-align:center;">
@@ -233,7 +233,7 @@
 
 
         
-<div style="background-image: url('img/br/hello.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
+<div style="background-image: url('images/br/hello.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
 </div>
       
 
