--- a/arts.html
+++ b/arts.html
@@ -94,10 +94,10 @@
 
 </head>
 
-<div style="background-image: url('img/br/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px;">
+<div style="background-image: url('images/br/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px;">
 
   <div>
- <img class="my-logo"  src="img/aeclmylogo.png">
+ <img class="my-logo"  src="images/aeclmylogo.png">
 </div>
 
 <div>
@@ -107,7 +107,7 @@
     <div id="titlebar" style="border-top: 5px solid black; border-bottom: 5px solid black; text-decoration: underline;">
         <a id="homebutton" class="titlebar" href="XREADME.html">HOME 🏡</a>
         <a id="aboutmebutton" class="titlebar" href="aboutme.html">ABOUT 🇬🇹</a>
-        <a id="adventuresbutton" class="titlebar" href="badm320midterm.html">BADMN320 BLOG 📝</a>
+        <a id="adventuresbutton" class="titlebar" href="badm320midterm.html">NEW WEBSITE</a>
         <a id="blogbutton" class="titlebar" href="arts.html">ARTS🎨</a>
         <a id="gallerybutton" class="titlebar" href="gallery.html">GALLERY 📷</a>
         <a id="contactbutton" class="titlebar" href="contact.html">CONTACT 📬</a> 
@@ -120,20 +120,20 @@
 
    <p style="font-size:22px;font;text-align:center;">Under Construction!</p>
 
-   <img style="width:20%; position: relative;" class="img-ae" src="img/peachpj.JPG" alt="peachpj">
+   <img style="width:20%; position: relative;" class="img-ae" src="images/peachpj.JPG" alt="peachpj">
 
 
-    <img style="width:40%; position: relative;" class="img-art" src="img/aeclportrait.jpg">
+    <img style="width:40%; position: relative;" class="img-art" src="images/aeclportrait.jpg">
 
     
-   <img style="width:20%; position: relative;" class="img-art" src="img/kagomeart.jpg">
+   <img style="width:20%; position: relative;" class="img-art" src="images/kagomeart.jpg">
 
 
-   <img style="width:40%; position: relative;" class="img-art" src="img/pianogirlaecl.jpg">
+   <img style="width:40%; position: relative;" class="img-art" src="images/pianogirlaecl.jpg">
 
-    <img style="width:40%; position: relative;" class="img-art" src="img/selfimage.jpg">
+    <img style="width:40%; position: relative;" class="img-art" src="images/selfimage.jpg">
 
-    <img style="width:45%; position: relative;" class="img-art" src="img/aeclinuyasha.jpg">
+    <img style="width:45%; position: relative;" class="img-art" src="images/aeclinuyasha.jpg">
 
   <br > 
 </div>
@@ -149,7 +149,7 @@
 
 
 
-<div style="background-image: url('img/br/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
+<div style="background-image: url('images/br/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
 </div>
 
 </html>
