--- a/gallery.html
+++ b/gallery.html
@@ -90,11 +90,11 @@
 </head>
 
 <!---------------------------------------------------------------------------------------------------------------------------->
-<div style="background-image: url('img/br/newilogo.jpeg'); background-position: center; z-index: 2; background-position: fixed; padding-top: 50px;">
+<div style="background-image: url('images/br/newilogo.jpeg'); background-position: center; z-index: 2; background-position: fixed; padding-top: 50px;">
 
 
 <div>
- <img class="my-logo"  src="img/aeclmylogo.png">
+ <img class="my-logo"  src="images/aecl-logo.png">
 </div>
 
 <div>
@@ -104,7 +104,7 @@
     <div id="titlebar" style="border-top: 5px solid black; border-bottom: 5px solid black; text-decoration: underline;">
         <a id="homebutton" class="titlebar" href="XREADME.html">HOME 🏡</a>
         <a id="aboutmebutton" class="titlebar" href="aboutme.html">ABOUT ME👩🏻‍🎓</a>
-        <a id="adventuresbutton" class="titlebar" href="badm320midterm.html">BADMN320 BLOG 📝</a>
+        <a id="adventuresbutton" class="titlebar" href="badm320midterm.html">NEW WEBSITE</a>
         <a id="blogbutton" class="titlebar" href="arts.html">ARTS🎨</a>
         <a id="gallerybutton" class="titlebar" href="gallery.html">GALLERY📷</a>
         <a id="contactbutton" class="titlebar" href="contact.html">CONTACT📬</a> 
@@ -115,10 +115,10 @@
     <h1>Gallery</h1>
     
     <div class=gallery>
-      <img class="img-ae" src="img/guatekorean-small.jpg" alt="guate">
-      <img class="img-ae" src="img/melk-small.JPG" alt="austria"> 
-      <img class="img-ae" src="img/whitedress-small.JPG" alt="uiuc">
-      <img class="img-ae" src="img/lastdaypmj-small.jpg" alt="dc">
+      <img class="img-ae" src="images/guatekorean-small.jpg" alt="guate">
+      <img class="img-ae" src="images/melk-small.JPG" alt="austria"> 
+      <img class="img-ae" src="images/whitedress-small.JPG" alt="uiuc">
+      <img class="img-ae" src="images/lastdaypmj-small.jpg" alt="dc">
     </div>
 <br > 
 
@@ -132,7 +132,7 @@
 </body>
 
 
-<div style="background-image: url('img/br/newilogo.jpeg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
+<div style="background-image: url('images/br/newilogo.jpeg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
 </div>
 
 </html>
